# Health-Tracking

./: DEVELOPER_GUIDE.md  Jenkinsfile  PROJECT_DOCUMENTATION.md  TECHNICAL_ARCHITECTURE.md
Backend/fastapi_backend/: pyproject.toml
my-server/: Dockerfile  pyproject.toml  requirements.txt
my-server/scripts/: manageDB.bat  run-server.bat
my-server/src/my_server/: main.py
my-server/src/my_server/api/: about_yourself.py  achievements.py  auth.py  basic_profile.py  exercise_logs.py  food_logs.py  meals.py  notification_settings.py  nutrition_database.py  physical_info.py  protected.py  sleep_logs.py  user_goals.py  users.py  water_intake_logs.py
my-server/src/my_server/db/: docker-compose.yaml  init.sql
my-server/src/my_server/schema/: about_yourself.py  achievements.py  auth.py  basic_profile.py  exercise_logs.py  food_logs.py  meals.py  notification_settings.py  nutrition_database.py  physical_info.py  sleep_logs.py  user_goals.py  users.py  water_intake_logs.py
my_app/: README.md  habit_daily.db  l10n.yaml  pubspec.yaml
my_app/android/app/: build.gradle.kts
my_app/lib/: dashboard.dart  main.dart
my_app/lib/charts/: chart_point.dart  chart_style.dart  fill_daily_series.dart  nice_scale.dart  trend_line_chart.dart
my_app/lib/l10n/: app_en.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_th.dart  app_th.arb
my_app/lib/models/: achievement.dart  exercise_activity.dart  exercise_log.dart  food_log.dart  goal.dart  meal.dart  notification_settings.dart  nutrition.dart  sleep_log.dart  water_day.dart
(+67 files in other folders)
