[project]
name = "my-server"
version = "0.1.0"
description = ""
authors = [
    {name = "Punyaphat Kaewkao",email = "punyaphat0010@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "my_server", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
